Login system + ui fixes

--- a/GegaGamez.WebUI/Pages/Collections/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Collections/Index.cshtml
@@ -11,7 +11,7 @@
     </header>
 </section>
 <article class="flex-container game-item">
-    <img class="img-standard game-img hover-shadow" src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c5/MassEffect_Xbox.jpg/261px-MassEffect_Xbox.jpg" alt="Alternate Text" />
+    <img class="img-standard game-img hover-shadow" src="/img/game.png" alt="Alternate Text" />
 
     <div class="text-info-block">
         <h3 class="game-title-small">Mass Effect</h3>
