--- a/GegaGamez.WebUI/Pages/Users/Search.cshtml
+++ b/GegaGamez.WebUI/Pages/Users/Search.cshtml
@@ -21,7 +21,7 @@
 
         <article class="flex-container search-result user-item">
             <a asp-page="/Users/Index" asp-route-id="@user.Id"> 
-                <img class="img-standard game-img hover-shadow" src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c5/MassEffect_Xbox.jpg/261px-MassEffect_Xbox.jpg" alt="Game image" />
+                <img class="img-standard game-img hover-shadow" src="/img/avatar.png" alt="Avatar user" />
             </a>
 
             <div class="text-info-block">
