--- a/GegaGamez.WebUI/Pages/Developers/Search.cshtml
+++ b/GegaGamez.WebUI/Pages/Developers/Search.cshtml
@@ -20,7 +20,7 @@
 
         <article class="flex-container search-result game-item">
             <a asp-page="/Developers/Index" asp-route-id="@dev.Id"> 
-                <img class="img-standard game-img hover-shadow" src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c5/MassEffect_Xbox.jpg/261px-MassEffect_Xbox.jpg" alt="Game image" />
+                <img class="img-standard game-img hover-shadow" src="/img/developer.png" alt="Game image" />
             </a>
 
             <div class="text-info-block">
@@ -31,30 +31,5 @@
                 </span>
             </div>
         </article>
-        
-}
-    @*<article class="flex-container search-result game-item">
-        <img class="img-standard game-img hover-shadow" src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c5/MassEffect_Xbox.jpg/261px-MassEffect_Xbox.jpg" alt="Alternate Text" />
-
-        <div class="text-info-block">
-            <h3 class="game-title-small">Mass Effect</h3>
-
-            <span class="rating-small">
-                8/10
-            </span>
-
-            <span class="font-secondary">
-                2006, Developer
-            </span>
-
-            <!--<span class="font-secondary">-->
-            <!--<a>Developer</a>-->
-            <!--Developer
-            </span>-->
-
-            <span class="game-description-small">
-                A small description. This fight will be your last!
-            </span>
-        </div>
-    </article>*@
+    }
 </section>
