--- a/GegaGamez.WebUI/Pages/Register.cshtml
+++ b/GegaGamez.WebUI/Pages/Register.cshtml
@@ -8,22 +8,21 @@
         <a class="go-back-arrow" href="#"><i class="fa-solid fa-arrow-left font-primary"></i></a>
         <h2 class="font-contrast title">Register</h2>
 </div>
-<form action="/" method="post" class="vertical-container auth-form" id="register-form">
+<form method="post" class="vertical-container auth-form" id="register-form">
 
     <div class="vertical-container">
-        <label for="username">Username</label>
-        <input id="username" type="text" name="username" value="" class="border-primary bg-secondary font-primary" />
+        <label asp-for="Username"></label>
+        <input id="username" asp-for="Username" class="border-primary bg-secondary font-primary" />
     </div>
 
     <div class="vertical-container">
-        <label for="password">Password</label>
-        <input id="password" type="password" name="password" value="" class="border-primary bg-secondary font-primary" />
+        <label asp-for="Password"></label>
+        <input id="password" asp-for="Password" class="border-primary bg-secondary font-primary" />
     </div>
 
     <div class="vertical-container">
-        <label for="confirm-password">Confirm Password</label>
-
-        <input id="confirm-password" type="password" name="confirmPasword" value="" class="border-primary bg-secondary font-primary" />
+        <label asp-for="ConfirmPassword">Confirm Password</label>
+        <input id="confirm-password" asp-for="ConfirmPassword" class="border-primary bg-secondary font-primary" />
     </div>
 
     <div class="btn-group">
