--- a/GegaGamez.WebUI/Pages/Users/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Users/Index.cshtml
@@ -113,7 +113,7 @@
             <div class="game-collection-item user-collection-item">
                 <a asp-page="/Collections/Index" class="game-collection-card user-collection-card">
                     <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
-                    <span class="collection-name">Uwuwu</span>
+                    <span class="collection-name">The best</span>
                 </a>
                 <section class="game-collection-actions">
                     <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
@@ -123,7 +123,7 @@
             <div class="game-collection-item user-collection-item">
                 <a asp-page="/Collections/Index" class="game-collection-card user-collection-card">
                     <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
-                    <span class="collection-name">Running down to Cuba</span>
+                    <span class="collection-name">Running </span>
                 </a>
                 <section class="game-collection-actions">
                     <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
@@ -153,7 +153,7 @@
             <div class="game-collection-item user-collection-item">
                 <a asp-page="/Collections/Index" class="game-collection-card user-collection-card">
                     <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
-                    <span class="collection-name">Oh as I was going</span>
+                    <span class="collection-name">Hoho</span>
                 </a>
                 <section class="game-collection-actions">
                     <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
