copied DAL interfaces and entities to Shared project. Removed data annotations noise

--- a/GegaGamez.WebUI/Pages/Users/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Users/Index.cshtml
@@ -180,7 +180,7 @@
 
             <div class="input-block">
                 <label>Say a few things about yourself</label>
-                <textarea title="Pepsi" placeholder="I eat people..." name="name"></textarea>
+                <textarea title="Pepsi" placeholder="Hello" name="name"></textarea>
             </div>
         </section>
         <section class="popup-actions">
