--- a/GegaGamez.WebUI/Pages/Users/Search.cshtml
+++ b/GegaGamez.WebUI/Pages/Users/Search.cshtml
@@ -28,7 +28,7 @@
                 <h3 class="game-title-small">@user.Username</h3>
 
                 <span class="game-description-small">
-                    @user.Country.Name
+                    @user.Country?.Name
                 </span>
             </div>
         </article>
