Dependency injection, PL models, validation (#31)
- Depdency injection is now better implemented (imo)
- Moved interfaces and entities to separate Shared project
- Added presentation layer models with new mapping
- Added validation for these models

--- a/GegaGamez.WebUI/Pages/Collections/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Collections/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿@page
 @model GegaGamez.WebUI.Pages.Collections.IndexModel
 @{
-    bool logedIn = true;
-    bool authorized = true;
+    AuthDisplayHelper authHelper = new(User);
+
+    bool logedIn = authHelper.IsAuthenticated;
+
+    //bool authorized = authHelper.IsAuthorized(Model.UserProfile!.Id);
+    bool authorized = false;
+
+    //if (authorized)
+    //{
+    //    //ViewData ["profile"] = true;
+    //}
 }
 <section id="collection-full-info">
     <header id="collection-header" class="border-primary">
