--- a/GegaGamez.WebUI/wwwroot/css/main.css
+++ b/GegaGamez.WebUI/wwwroot/css/main.css
@@ -109,11 +109,6 @@
 
 .game-comment {
     --display-remove-comment-btn: none;
-    /*    align-items: center;
-    height: auto;
-    justify-content: space-evenly;
-    width: 65%;
-    margin-top: 15px;*/
 }
 
     .game-comment:hover {
@@ -217,9 +212,6 @@
 }
 
 #user-collections-section {
-    /*display: flex;
-    flex-wrap: wrap;
-    justify-content: start;*/
 }
 
 .game-img-small,
@@ -228,9 +220,6 @@
 }
 
 #game-img {
-    /*float: left;
-    margin-bottom: 15px;
-    margin-right: 15px;*/
 }
 
 .img-standard {
@@ -439,18 +428,9 @@
 }
 
 #search-results {
-    /*text-align: center;*/
 }
 
 .game-item {
-    /*align-content: stretch;*/
-    /*align-items: center;*/
-    /*border: 1px solid var(--text-color-primary);*/
-    /*display: flex;*/
-    /*flex-direction: row;*/
-    /*height: auto;*/
-    /*justify-content: space-between;*/
-    /*margin-top: 15px;*/
 }
 
     .game-item:hover {
@@ -530,4 +510,15 @@
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+#report{
+    margin-top: 60px;
+    display:grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 30px;
+}
+
+.fat-text{
+    font-size: 30px;
 }
