Updated Game Search

--- a/GegaGamez.WebUI/Pages/Games/Search.cshtml
+++ b/GegaGamez.WebUI/Pages/Games/Search.cshtml
@@ -24,7 +24,7 @@
 }
 
 <ul id="genre-selector" class="border-primary">
-    @foreach(var genre in Model.Genres)
+    @foreach(var genre in Model.AvailableGenres)
     {
         // generate genre link
         <li>
