--- a/GegaGamez.WebUI/Pages/Games/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Games/Index.cshtml
@@ -18,8 +18,21 @@
     <section id="game-text-info" class="text-info-block">
         <h1>@Model.Game.Title</h1>
         
-        <span>@Model.Game.AvgRatingScore / <span class="font-contrast">My rating - @Model.UserRatingForGame?.RatingScore</span></span>
-        
+        <span>
+            @if(Model.Game.AvgRatingScore.HasValue)
+            {
+                <span>@Model.Game.AvgRatingScore</span>
+            }
+            else
+            {
+                <span class="font-contrast">No rating yet</span>
+            }
+            @if (Model.UserRatingForGame.HasValue)
+            {
+                <span class="font-contrast"> / My rating - @Model.UserRatingForGame.Value</span>
+            }
+         
+        </span>
         <span class="font-secondary">
             <a href="#" class="font-secondary">@Model.Game.Developer.Name</a>, <span>Price</span>
         </span>
@@ -39,8 +52,8 @@
     <section class="btn-group">
         @if(logedIn == true)
         {
-           <button type="button" class="btn-contrast rounded">Add to</button>
-           <button type="button" class="btn-contrast rounded">Rate</button> 
+           <button type="button" class="btn-contrast rounded" onclick="showCollectionModal()">Add to</button>
+           <button type="button" class="btn-contrast rounded" onclick="showRateGameModal()">Rate</button> 
         }
     </section>
 </article>
@@ -103,3 +116,61 @@
     </section>
 </form>
 
+<!-- MOVE GAME TO COLLECTION modal!!! -->
+<form asp-page-handler="MoveGameToCollection" method="post" id="move-game-to-collection-modal" class="popup-interactive bg-secondary border-primary">
+	@*<input asp-for value=@Model.Game.Id />*@
+    <h3 class="font-contrast">
+        Select collection:
+    </h3>
+    <input asp-for=GameToDefaultCollection.GameId value=@Model.Game.Id readonly hidden />
+    <input asp-for=GameToUserCollection.GameId value=@Model.Game.Id readonly hidden />
+    <div>
+        <select size="5" asp-for=GameToDefaultCollection.CollectionId asp-items=@Model.AvailableDefaultCollections></select>
+    </div>
+	<div>
+        <select size="5" asp-for=GameToUserCollection.CollectionId asp-items=@Model.AvailableUserCollections></select>
+    </div>
+
+    <section class="popup-actions">
+        <button type="submit" class="borderless">Ok</button>
+        <button type="button" onclick="hideCollectionModal()" class="btn-contrast rounded">Cancel</button>
+    </section>
+    @*<select title="Collection">
+        @foreach (var defaultCollection in new List<string>())
+        {
+            <option value="Planned">Planned</option>
+        }
+
+        @foreach(var userCollection in new List<string>())
+        {
+            <option value="Favorites or something">My Absolute favorites</option>
+        }
+
+        <!--!!! REMOVE THIS LATER !!!-->
+        <option value="Planned">Planned</option>
+        <option value="Playing">Playing</option>
+        <option value="Completed">Completed</option>
+        <option value="Dropped">Dropped</option>
+
+        <option value="Planned">My Favorites</option>
+        <option value="Playing">To me whey hey hey YEAH!</option>
+        <option value="Completed">Lorem Ipsum</option>
+        <option value="Dropped">Dolor sit amet</option>
+    </select>*@
+
+</form>
+
+<!-- Rate game modal -->
+<form method="post" asp-page-handler="RateGame" id="rate-game-modal" class="popup-interactive bg-secondary border-primary">
+    <h3 class="font-contrast">
+        How do you rate this game?
+    </h3>
+    @*<input type="number" name="id" readonly hidden />*@
+    <input asp-for="UpdateUserRating.GameId" value="@Model.Game.Id" hidden/>
+    <input asp-for="UpdateUserRating.UserId" value=@userId  hidden/>
+    <select asp-for="UpdateUserRating.RatingScore" title="Score?" asp-items=@Model.AvailableRatingScores></select>
+    <section class="popup-actions">
+        <button type="submit" class="borderless">Rate!</button>
+        <button type="button" onclick="hideRateGameModal()" class="btn-contrast rounded">Cancel</button>
+    </section>
+</form>
